# cine-forge

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  GEMINI.md  Makefile  README.md  fly.toml  package-lock.json  package.json  pyproject.toml
.claude/: settings.local.json
.claude/skills/: build-story  check-in-diff  create-module  create-role  create-story  mark-story-done  run-pipeline
.cursor/commands/: build-story.md
.cursor/commands.legacy/: check-in-diff.md  mark-story-done.md  validate.md
.cursor/rules/: README.md
.gemini/commands/: build-story.toml  check-in-diff.toml  create-module.toml  create-role.toml  create-story.toml  decompose-spec.toml  deploy.toml  golden-create.toml  golden-verify-reset.toml  golden-verify.toml  improve-eval.toml  improve-skill.toml  init-project.toml  mark-story-done.toml  reflect.toml  retrofit-ideal.toml  run-pipeline.toml  setup-env-ai.toml  setup-env-dev.toml  setup-eval-registry.toml  setup-evals.toml  setup-golden.toml  setup-ideal.toml  setup-spec.toml  setup-stories.toml  triage.toml  validate.toml  webapp-testing.toml
benchmarks/: README.md
benchmarks/golden/: README.md  _coverage-matrix.json  _verification-checklist.md  _verify-golden-outputs.md  continuity-extraction-golden.json  enrich-scenes-golden.json  normalize-signal-golden.json  qa-pass-golden.json  the-mariner-characters.json  the-mariner-config.json  the-mariner-entity-discovery.json  the-mariner-locations.json  (+5 more)
docs/: deploy-log.md  deployment.md  ideal.md  ideas.md  inbox.md  retrofit-gaps.md  scout.md  setup-checklist.md  spec.md  stories.md
samples/: sample-notes.md  sample-prose.txt  sample-screenplay.fountain
scripts/: README.md  check-compromises.py  discover-models.py  extract-eval-metrics.py  reproduce_mariner_failure.py  reproduce_ui_error.py  sync-agent-skills.sh  ui_smoke_probe.mjs
tests/: AGENTS.md  conftest.py
ui/: .jscpd.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
(+850 files in other folders)
