[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cine-forge"
version = "0.1.3"
description = "AI-first film reasoning and production pipeline."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.0.0",
  "PyYAML>=6.0.0",
  "pypdf",
  "fountain-tools",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "python-multipart>=0.0.9",
  "python-docx",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.9.0",
  "httpx>=0.27.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q"
markers = [
  "unit: fast tests for isolated units",
  "integration: tests spanning multiple components",
  "smoke: lightweight end-to-end checks",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []
